syntax = "proto3";

package user;

service UserService {
  rpc GetCompanyIdByUserId (GetCompanyIdRequest) returns (GetCompanyIdResponse);
}

message GetCompanyIdRequest {
  string userId = 1; 
}

message GetCompanyIdResponse {
  string companyId = 1; 
}